# lightning

./: .gitignore  .gitlab-ci.yml  .msggen.json  CLAUDE.md  Cargo.toml  Makefile  build.py
channeld/: channeld.c  channeld_wire.csv  full_channel.c
cln-grpc/: Cargo.toml
cln-rpc/: Cargo.toml
common/: htlc_wire.c  htlc_wire.h
doc/: PLUGINS.md  lightning-delpay.7.md  lightning-listconfigs.7  lightning-listconfigs.7.md  lightning-listpays.7.md  lightning-listsendpays.7.md  lightning-sendpay.7.md  lightning-waitsendpay.7.md  lightningd-config.5.md
lightningd/: channel_control.c  lightningd.h  notification.c  notification.h  opening_common.c  opening_common.h  opening_control.c  options.c  pay.c  peer_control.c
openingd/: common.c  openingd.c
plugins/: Cargo.toml  Makefile  libplugin-pay.c  pay.c
plugins/lsps-plugin/: Cargo.toml
plugins/lsps-plugin/src/: client.rs  lib.rs  model.rs  policy.rs  service.rs  util.rs
plugins/lsps-plugin/src/cln_adapters/: mod.rs  notifications.rs  rpc.rs  session_handler.rs
plugins/lsps-plugin/src/core/: mod.rs
plugins/lsps-plugin/src/core/lsps2/: handler.rs  htlc.rs  htlc_holder.rs  manager.rs  mod.rs  persistence.rs  provider.rs  psbt.rs  service.rs  session.rs  timeouts.rs
plugins/lsps-plugin/src/jsonrpc/: server.rs
plugins/lsps-plugin/src/lsps0/: handler.rs  primitives.rs
plugins/lsps-plugin/src/lsps2/: cln.rs  handler.rs  mod.rs  model.rs  service.rs
plugins/lsps-plugin/src/lsps2/service/: options.rs
plugins/lsps-plugin/src/proto/: jsonrpc.rs  lsps0.rs  lsps2.rs
plugins/lsps-plugin/tests/: integration_mpp.rs
(+31 files in other folders)
