[package]
name = "cln-lsps"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cln-lsps-client"
path = "src/client.rs"

[[bin]]
name = "cln-lsps-service"
path = "src/service.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bitcoin = { version = "0.31", default-features = false, features = ["serde"] }
cln-plugin = { version = "0.5", path = "../" }
cln-rpc = { version = "0.5", path = "../../cln-rpc" }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
log = "0.4"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
